--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ body {
     display:flex;
     margin: 0;
     flex-direction: column;
-    min-height: 100%;
+    height: 100%;
     background-color: darkblue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
@@ -56,7 +56,7 @@ a:visited {
 .index {
     display: flex;
     min-height: calc(100vh - 40vh);
-    flex:1;
+    flex: 1 0 auto;
     margin: .5em;
 }
 .index__fishlist {
@@ -68,8 +68,7 @@ a:visited {
 }
 .index__fish {
     min-width: 35vh;
-    border: ridge darkblue;
-    margin: .5em;
+    margin: .3em;
     background-color: rgb(113, 213, 247);
 }
 .index__fishname {
@@ -101,11 +100,8 @@ img {
 }
 .footer {
     background-color: rgb(113, 213, 247) ;
-    clear: both;
-    position: relative;
-    z-index: 10;
     height: 4em;
-    margin-top: -3em;
     display: flex;
     flex-direction: row;
+    flex-shrink: 0;
 }
