--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,7 @@
-/* #fishtank {}
-
-.fish {}
-
-.fish_name {} */
+@import "/styles/fishclean.css";
+@import "/styles/fishlist.css";
+@import "/styles/footer.css";
+@import "/styles/header.css";
 
 body {
     display:flex;
@@ -10,20 +9,12 @@ body {
     flex-direction: column;
     height: 100%;
     background-image: url(/images/ocean.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     position: relative;
     overflow: auto;
-}
-
-.header {
-    display: flex;
-    flex-direction: row;
-    flex:1;
-    max-height: 8vh;
-    font-weight: 900;
-    padding: 10px;
-   
 }
 a.link {
     color:black;
@@ -31,76 +22,9 @@ a.link {
 a:visited {
     color:black
 }
-.header__title {
-    flex: 1;
-    max-width: 35vh;
-    font-size: 45px;
-    font-family: 'Caveat', cursive;
-    text-align: center;
-}
-.header__nav {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-    flex:1;
-    font-size: 1.3em;
-    font-family: 'Caveat', cursive;
-}
-.header__navitem {
-    width: 50%;
-    vertical-align: middle;
-    text-align: center;
-    
-}
-.index {
-    display: flex;
-    min-height: calc(100vh - 40vh);
-    flex: 1 0 auto;
-    margin: .5em;
-}
-.index__fishlist {
-    display: flex;
-    flex-wrap: wrap;
-    min-width: 65vh;
-    justify-content: space-around;
-    margin-bottom: 10em;
-}
-.index__fish {
-    min-width: 35vh;
-    margin: .3em;
-    background-color: rgb(113, 213, 247);
-}
-.index__fishname {
-    text-align: center;
-    font-weight: bolder;
-    font-family: 'Caveat', cursive;
-    font-size: 1.3em;
-}
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
-.index__fishclean {
-    min-width: 35vh;
-    background-color: rgb(113, 213, 247);
-    padding: .5em;
-    margin: .5em;
-    max-height: 32em;
-}
-.index__fishcleanitem {
-    min-height: 5vh;
-}
-.fishclean__header {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 3em;
-    font-family: 'Caveat', cursive;
-}
-.footer {
-    background-color: rgb(113, 213, 247) ;
-    height: 4em;
-    display: flex;
-    flex-direction: row;
-    flex-shrink: 0;
-}
+
