--- a/styles/fishlist.css
+++ b/styles/fishlist.css
@@ -17,6 +17,7 @@
     background-color: rgb(59, 181, 197, .7);
     box-shadow: 0 4px 8px 0 #111111;
     border-radius: 10%;    
+    text-align: center;
 }
 .index__fish:hover {
     box-shadow: 0 8px 16px 0 #111111;
@@ -26,13 +27,30 @@
     font-weight: bolder;
     font-family: 'Caveat', cursive;
     margin:.5em;
-    font-size: 1.6em;
+    font-size: 1.8em;
 }
 .detailsButton {
     text-align: center;
-    margin-top: .5em ;
+    margin: 1em ;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: cornsilk;
+    border-radius: 10%; 
+    height: 2.5em;
+    width: 10em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
 }
 .fishImg {
     width: 250px;
     height: 150px;
+}
+.dialog--fish {
+    text-align: left;
+}
+.button--close {
+    text-align: center;
+}
+.aboutHeader {
+    font-weight: bolder;
+    text-align: center;
 }
